[metadata]
name = zun-tempest-plugin
summary = Tempest plugin zun_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/zun-tempest-plugin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    zun_tempest_plugin

[build_sphinx]
all-files = 1
warning-is-error = 1
source-dir = doc/source
build-dir = doc/build

[upload_sphinx]
upload-dir = doc/build/html

[compile_catalog]
directory = zun_tempest_plugin/locale
domain = zun_tempest_plugin

[update_catalog]
domain = zun_tempest_plugin
output_dir = zun_tempest_plugin/locale
input_file = zun_tempest_plugin/locale/zun_tempest_plugin.pot

[extract_messages]
keywords = _ gettext ngettext l_ lazy_gettext
mapping_file = babel.cfg
output_file = zun_tempest_plugin/locale/zun_tempest_plugin.pot

[entry_points]
tempest.test_plugins =
    zun_tests = zun_tempest_plugin.tests.tempest.plugin:ZunTempestPlugin
