[metadata]
name = zun-tempest-plugin
summary = Tempest plugin zun_tempest_plugin
description-file =
    README.rst
author = OpenStack
author-email = openstack-discuss@lists.openstack.org
home-page = https://docs.openstack.org/zun-tempest-plugin/latest/
classifier =
    Environment :: OpenStack
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5

[files]
packages =
    zun_tempest_plugin

[entry_points]
tempest.test_plugins =
    zun_tests = zun_tempest_plugin.tests.tempest.plugin:ZunTempestPlugin
